1000_elastic_master.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-master
  namespace: qa
  labels:
    app: elasticsearch
    role: master
spec:
  selector:
    app: elasticsearch
    role: master
  ports:
  - port: 9300
    name: transport
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elastic-master
  namespace: qa
  labels:
    app: elasticsearch
    role: master
spec:
  selector:
    matchLabels:
      app: elasticsearch
      role: master
  serviceName: elasticsearch-master
  replicas: 1
  template:
    metadata:
      labels:
        app: elasticsearch
        role: master
    spec:
      containers:
      - name: elasticsearch-master
        image: docker.elastic.co/elasticsearch/elasticsearch:8.2.0
        resources:
          limits:
            memory: "3072Mi"
            cpu: "2000m"
        ports:
        - containerPort: 9300
          name: transport
        volumeMounts:
        - name: config
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          readOnly: true
          subPath: elasticsearch.yml
        - name: limits
          mountPath: /etc/security/limits.conf
          readOnly: true
          subPath: limits.conf
        - name: elastic-master
          mountPath: /usr/share/elasticsearch/data
      volumes:
        - name: config
          configMap:
            name: elasticsearch-master-config
        - name: limits
          configMap:
            name: elasticsearch-master-config
  volumeClaimTemplates:
  - metadata:
      name: elastic-master
      labels:
        app: elasticsearch
        role: master
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: rook-ceph-block
      resources:
        requests:
          storage: 10Gi
---
