1002_elastic_ingest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-ingest
  labels:
    app: elasticsearch
    role: ingest
spec:
  selector:
    app: elasticsearch
    role: ingest
  ports:
  - port: 9300
    name: transport
  - port: 9200
    name: ingest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elastic-ingest
  labels:
    app: elasticsearch
    role: ingest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
      role: ingest
  template:
    metadata:
      labels:
        app: elasticsearch
        role: ingest
    spec:
      containers:
      - name: elasticsearch-ingest
        image: docker.elastic.co/elasticsearch/elasticsearch:8.2.0
        ports:
        - containerPort: 9200
          name: ingest
        - containerPort: 9300
          name: transport
        volumeMounts:
          - name: config
            mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
            readOnly: true
            subPath: elasticsearch.yml
          - name: storage
            mountPath: /data
        resources:
          limits:
            memory: "1024Mi"
            cpu: "1500m"
      volumes:
      - name: config
        configMap:
          name: elasticsearch-ingest
      - name: "storage"
        emptyDir:
          medium: ""
