1003_elastic_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic-ingress
  labels:
    app: elastic-ingapp
spec:
  rules:
  - host: ux360-http.izzi.mx
    http:
      paths:
      - path: /elastic
        pathType: Prefix
        backend:
          service:
            name: elasticsearch-ingest
            port: 
              number: 9200
  ingressClassName: nginx
